--- a/style.css
+++ b/style.css
@@ -15,15 +15,14 @@
 
   header {
     position: relative;
-    background: linear-gradient(rgb(144,144,144)85% rgb(177, 177, 177));
+    background: linear-gradient(rgb(144, 144, 144) 85%, rgb(177, 177, 177));
     padding-top: 20px;
     text-align: center;
   }
-
   .search {
     text-align: left;
     width: 900px;
-    font-size: 12px;
+    font-size: 13px;
     margin: 0 auto;
   }
   .search img {
@@ -39,7 +38,6 @@
   }
   .searchword >li{
       display: inline;
-      list-style: none;
   }
   .searchword >a {
     color: black;
@@ -48,72 +46,224 @@
     text-decoration: none;
     color: white;
   }
-  
-  .horizontal {
-   
-    position: relative;
-    border-style: solid;
- 
-  }
-  
-  .horizontal ul {
+  .search>li {
     list-style: none;
-    padding: 10px;
-    border-radius: 0 0 25px 0;
+    display: inline;    
   }
-  
-  .horizontal >ul >li {
+  .width900 {
+      margin: 0 auto; 
+      width: 900px;
+  }
+  .paz-logo {
+      position: absolute;
+  }
+  .horizontal {
+    font-size: 16px;
+    padding-top: 20px;
+    left:0;
+  }
+  .horizontal>ul {
+    padding: 0px;
+    text-align: left;
+  }
+  nav>ul>li {
     display: inline;
+    padding: 10px;
   }
-  
-  .horizontal >ul >li >a {
+  .horizontal li a {
     text-decoration: none;
-    font-weight: bold;
     color: white;
-    font-family: arial;
-    font-size: 14px;
-    display: inline-block;
-    padding-right: 10px;
     padding-left: 10px;
-    border-right: 3px solid white;
+    border-left: 3px solid white;
   }
-  
-  .horizontal ul li a:hover {
+  #LiLast {
+      border-left: 0;
+  }
+  body a:hover {
     text-decoration: underline;
     color: blue;
   }
   .menu {
     position: relative;
-    border-right: thick white;
+  }
+  .menu:hover .dropdown-content {
+      display: block;
   }
   .dropdown-content {
     display: none;
-    text-decoration: none;
-    background-color: gray;
     position: absolute;
+    background-color: rgb(144,144,144);
+    padding: 0;
+    margin: 0 0;
+    white-space: nowrap;
     z-index:1000;
-    right: 0;
+    right: 20px;
+    list-style: :none;
     font-weight: bold;
   }
-  
+  .menu .dropdown-content>li{
+      padding: none;
+  }
   .dropdown-content a {
-  font-family: arial;
-  font-size: 12px;
-  color: white;
+    font-family: arial;
+    font-size: 14px;
+    color: white;
     display: block;
     text-decoration: none;
-    font-family: arial;
-    font-size: 12px;
     margin: 5px;
     border-top: thick white;
   }
-  
-  .menu:hover .dropdown-content{
-    display: block;
+  .menu .dropdown-content >li > a:hover{
+    background-color: rgb(211, 205, 205);
   }
+  .menu .dropdown-content >li > a {
+    border-bottom: 1px solid white; 
+    border-left: none;
+    display: block;
+    text-align: right;
+    padding: none;
+    padding-right: 6px;
+    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 25px;
+  }
+  .row {
+    margin:0 auto;
+    width: 900px;
+    padding-top:30px;
+}
+.column {
+    float: right;
+    border-radius: 0 0 25px 0;
+    width: 33%;
+    padding: 0 24px;
+ }
+.column::after {
+    content: "";
+    display: table;
+    clear: both;
+ }
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+ }
+.incolumn {
+    position:relative;
+    font-size: 12px;
+}
+.incolumnimage {
+    border-radius: 0 0 25px 0;   
+}
+
+.floattxt {
+    position: absolute;
+    background-color:rgb(140, 140, 140) ;
+    opacity: 0.9;
+    bottom:10px;
+    right:10px;
+    top:230px;
+    font-weight:none;
+    color:white;
+    font-family: Arial;
+    font-size:12px;
+    border-radius: 0 0 25px 0;
+}
+.floattxt a {
+    position: absolute;
+    left:10px;
+    background-color:rgb(140, 140, 140) ;
+    opacity: 0.9;
+    bottom:10px;
+     color:white;
+}
+.floattxt h3 {
+    font-size:16px;
+}
+.row2 {
+    padding-top:15px;
+    padding-bottom: 50px;
+}
+.floatimg {
+    position: absolute;
+    top:40px;
+    right:20px;
+}
+.floatmap {
+    position: absolute;
+    top:40px;
+    left:0;
+}
+.floatnav {
+    position: absolute;
+    top:40px;
+    right:-20px;
+}  
+.floatnav >li {
+    display: block;
+    list-style: none;
+    padding:3px;
+   
+}
+.floatnav>li>a {
+    color:rgba(0, 0, 0, 0.479); 
+    height: 20px;
+}
+.floatnav>li>a:hover {
+    color:blue;
+}
+.floatnav img {
+        position: relative;
+        top:0;
+        right:5px;
+    }
+.more-info {
+    position: absolute;
+    bottom:40px;
+    left:-15px;
+    color:rgba(0, 0, 0, 0.479); 
+}
+.more-info img {
+    position: relative;
+    top:0;
+    right:5px;
+}
+.incolumn>p {
+    position: absolute;
+    top:0;
+    right:20px;
+    color:rgba(0, 0, 0, 0.692);
+    font-size: 13px;
+    background-color: transparent;
+}
+footer {
+      position: fixed;
+      width:100%;
+      background: linear-gradient( rgba(11, 11, 10, 0.43),#767171);
+      border-radius: 3px;
+      bottom: 0;
+      padding:10px;
+    }
+footer> ul >li{
+    display: inline;
+    text-decoration: none;  
+}
+footer >ul>li>a {
+    text-decoration: none;
+    text-align: center;
+    padding: 5px;
+    border-left: 1px solid white;
+    color:white;
+    font-size: 13px;   
+}
+.ftrLilast {
+    color:red;
+    border:none;
+}
+
   
-  
-  /**images*/
+  /**images
   .column-width33 {
     position: relative;
     float: left;
@@ -153,5 +303,5 @@
   
   }
   
-  
+  */
   
